# flightradar

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  SECURITY_AUDIT.md  docker-compose.yml
backend/: pyproject.toml
backend-rs/: Cargo.toml
backend-rs/crates/adapters/auth/: Cargo.toml
backend-rs/crates/adapters/auth/src/: hasher.rs  jwt.rs  lib.rs
backend-rs/crates/adapters/metadata/: Cargo.toml
backend-rs/crates/adapters/metadata/src/: lib.rs  nighthawk.rs  static_airlines.rs
backend-rs/crates/adapters/metadata/tests/: nighthawk_integration.rs
backend-rs/crates/adapters/mongo/: Cargo.toml
backend-rs/crates/adapters/mongo/src/: collections.rs  connection.rs  error.rs  lib.rs  schema.rs
backend-rs/crates/adapters/mongo/src/codec/: aircraft.rs  crawler.rs  flight.rs  mod.rs  position.rs  user.rs
backend-rs/crates/adapters/mongo/src/repositories/: aircraft.rs  crawler_log.rs  crawler_queue.rs  flight.rs  mod.rs  position.rs  user.rs
backend-rs/crates/adapters/mongo/tests/: integration.rs
backend-rs/crates/adapters/radar/: Cargo.toml  build.rs
backend-rs/crates/adapters/radar/src/: dump1090.rs  grpc.rs  lib.rs
backend-rs/crates/adapters/radar/tests/: dump1090_integration.rs  grpc_integration.rs
backend-rs/crates/api/: Cargo.toml
backend-rs/crates/api/src/: error.rs  lib.rs  middleware.rs  router.rs  state.rs
backend-rs/crates/api/src/dto/: aircraft.rs  airline.rs  auth.rs  common.rs  flight.rs  live.rs  mod.rs
backend-rs/crates/api/src/extractors/: auth.rs  mod.rs  pagination.rs
backend-rs/crates/api/src/handlers/: admin.rs  aircraft.rs  airlines.rs  auth.rs  flights.rs  health.rs  mod.rs  sse.rs
backend-rs/crates/api/tests/: integration.rs
backend-rs/crates/application/: Cargo.toml
backend-rs/crates/application/src/: admin.rs  aircraft_crawler.rs  auth_service.rs  error.rs  event_bus.rs  flight_updater.rs  lib.rs  live_state.rs
backend-rs/crates/application/src/queries/: aircraft_query.rs  airline_query.rs  flight_query.rs  mod.rs
backend-rs/crates/domain/: Cargo.toml
backend-rs/crates/domain/src/: error.rs  lib.rs  value_objects.rs
backend-rs/crates/domain/src/entities/: aircraft.rs  airline.rs  flight.rs  live_snapshot.rs  mod.rs  position_report.rs  user.rs
backend-rs/crates/domain/src/policy/: callsign.rs  circuit_breaker.rs  mod.rs  modes.rs
backend-rs/crates/domain/src/ports/: airline_directory.rs  auth.rs  clock.rs  event_bus.rs  metadata_source.rs  mod.rs  radar_source.rs  repositories.rs
backend-rs/crates/server/: Cargo.toml
backend-rs/crates/server/src/: composition.rs  config.rs  lib.rs  main.rs  observability.rs  supervisor.rs
backend-rs/crates/server/tests/: smoke.rs
backend/app/: __init__.py  config.py
backend/app/api/: models.py
backend/app/api/endpoints/: admin.py  airlines.py  flights.py
backend/app/auth/: __init__.py  anonymous.py
backend/app/core/services/: airline_service.py
backend/app/middleware/: rate_limit.py
backend/resources/: operators.json
contrib/: entrypoint.sh  nginx.conf  supervisord.conf
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/contrib/: entrypoint.sh
frontend/src/: App.vue  config.ts  vite-env.d.ts
frontend/src/components/admin/: AircraftEditor.vue
frontend/src/components/flights/: FlightDetail.vue  FlightLogMiniMap.vue  FlightlogEntry.vue
frontend/src/components/map/: MapComposition.vue  MarkerManager.ts  flightPath.ts
frontend/src/composables/: useMapRenderer.ts
frontend/src/model/: backendModel.ts
frontend/src/services/: aircraftDetailsService.ts  authService.ts  dataIngestionService.ts  flightApiService.ts
frontend/src/stores/: locationStore.ts
frontend/src/stores/aircraft/: aircraftStore.ts  helpers.ts  index.ts  types.ts
frontend/src/utils/: aircraftIcons.ts
frontend/src/views/: AdminDashboard.vue  AdminLogin.vue  Airlines.vue  FlightLog.vue
src/: config.ts
