[workspace]
resolver = "2"
members = [
    "crates/domain",
    "crates/application",
    "crates/adapters/mongo",
    "crates/adapters/radar",
    "crates/adapters/metadata",
    "crates/adapters/auth",
    "crates/api",
    "crates/server",
]

[workspace.package]
edition = "2021"
rust-version = "1.82"
license = "MIT"
publish = false

[workspace.dependencies]
# Internal crates
flightradar-domain = { path = "crates/domain" }
flightradar-application = { path = "crates/application" }
flightradar-adapter-mongo = { path = "crates/adapters/mongo" }
flightradar-adapter-radar = { path = "crates/adapters/radar" }
flightradar-adapter-metadata = { path = "crates/adapters/metadata" }
flightradar-adapter-auth = { path = "crates/adapters/auth" }
flightradar-api = { path = "crates/api" }

# Async / runtime
tokio = { version = "1.40", features = ["full"] }
tokio-stream = "0.1"
async-trait = "0.1"
futures = "0.3"
futures-core = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Time
time = { version = "0.3", features = ["serde", "macros", "formatting", "parsing"] }

# Errors
thiserror = "1"
anyhow = "1"

# Logging / tracing / OTEL
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.27"
opentelemetry = "0.26"
opentelemetry_sdk = { version = "0.26", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.26", features = ["grpc-tonic", "metrics", "trace"] }
opentelemetry-semantic-conventions = "0.26"

# Test utilities
mockall = "0.13"

[workspace.lints.rust]
unsafe_code = "forbid"
unreachable_pub = "warn"
missing_debug_implementations = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
doc_markdown = "allow"
