[package]
name = "flightradar-api"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
flightradar-domain = { workspace = true }
flightradar-application = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true, features = ["sync"] }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
axum = { version = "0.7", features = ["macros"] }
axum-extra = { version = "0.9", features = ["cookie-private", "typed-header"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors", "compression-gzip", "request-id", "timeout"] }
tower_governor = "0.4"

[dev-dependencies]
flightradar-adapter-auth = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
