[package]
name = "flightradar-domain"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
time = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
futures-core = { workspace = true }
tracing = { workspace = true }
