[package]
name = "flightradar-server"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[[bin]]
name = "flightradar-server"
path = "src/main.rs"

[[bin]]
name = "flightradar-migrate"
path = "src/bin/migrate.rs"

[dependencies]
flightradar-domain = { workspace = true }
flightradar-application = { workspace = true }
flightradar-adapter-mongo = { workspace = true }
flightradar-adapter-radar = { workspace = true }
flightradar-adapter-metadata = { workspace = true }
flightradar-adapter-auth = { workspace = true }
flightradar-api = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-opentelemetry = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry-semantic-conventions = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
futures = { workspace = true }
axum = "0.7"
axum-extra = { version = "0.9", features = ["cookie-private"] }
mongodb = "3.1"
bson = "2.13"

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
serde_json = { workspace = true }
futures = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
