[package]
name = "flightradar-adapter-auth"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
flightradar-domain = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
argon2 = "0.5"
password-hash = "0.5"
jsonwebtoken = "9"
serde = { workspace = true }
rand = "0.8"

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
