[package]
name = "flightradar-adapter-mongo"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
flightradar-domain = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
time = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
mongodb = "3.1"
bson = "2.13"
regex = "1.11"
serde = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
